--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -1608,8 +1608,60 @@ font-family:'Roboto';
 
 
 
+// 
+//flash
+
+.login-flash-message.error{
+background-color: pink;
+width:100%  ;
+height:auto;
+padding:10px;
+display:flex;
+justify-content: center;
+align-items: center;
+text-align:center;
+color:red;
 
 
+}
+
+/* The Modal (background) */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: calc(50% - 125px);
+  top: calc(50% - 25px);
+  width: 250px;
+  height: 250px;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
 
 
 
