--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -1611,8 +1611,7 @@ font-family:'Roboto';
 // 
 //flash
 
-.login-flash-message.error{
-background-color: pink;
+.login-flash-message, .signup-flash-message{
 width:100%  ;
 height:auto;
 padding:10px;
@@ -1620,33 +1619,18 @@ display:flex;
 justify-content: center;
 align-items: center;
 text-align:center;
-color:red;
-
-
 }
-
+.login-flash-message.error, .signup-flash-message.error{
+  background-color: pink;
+  color:red;
+  
+  
+  }
+  .login-flash-message.success,  .signup-flash-message.success{
+    background-color: rgb(107, 216, 129);
+    color:rgb(16, 75, 15);
+    }
 /* The Modal (background) */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: calc(50% - 125px);
-  top: calc(50% - 25px);
-  width: 250px;
-  height: 250px;
-  overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
-}
-
-/* Modal Content */
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-}
 
 /* Close Button */
 .close {
@@ -2068,3 +2052,72 @@ height: 180px;
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+$size: 40vw;
+$color: $chalk-white;
+
+.success-svg {
+  display: block;
+  height: $size;
+  width: $size;
+  color: $color; /* SVG path use currentColor to inherit this */
+}
+
+.success-circle {
+  stroke-dasharray: 76;
+  stroke-dashoffset: 76;
+  animation: draw 1s forwards;
+}
+
+.success-tick {
+  stroke-dasharray: 18;
+  stroke-dashoffset: 18;
+  animation: draw 1s forwards 1s;
+}
+
+@keyframes draw { 
+  to { stroke-dashoffset: 0 } 
+}
+
+
+
+
+
+
+/* For styling demo, not required */
+
+.success {
+  background-color: $chalkboard-green;
+  position:absolute;
+  left:0;
+  top:0;
+  width:100%;
+  height:100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  // height: 100vh;
+  z-index:100;
+  // display:none;
+  opacity: 1;
+  transition: opacity 1s ease-in-out;
+  border:12px solid $wood;
+}
