--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -1353,7 +1353,10 @@ background:rgba(255, 255, 255, 0.25);
 
   /* Container */
   .login-container, .signup-container {
+    display: flex;
+    flex-direction: column;
     max-width: 90vw;
+    max-height:90vh;
     margin: 0 auto;
     padding: 5%;
     border-radius: 4px;
@@ -1591,7 +1594,7 @@ display: flex;
 }
 .create-account-label, .have-account-label{
 justify-content: flex-end;
-font-size:14px;
+font-size:12px;
 font-family:'Roboto';
 }
 .create-account-link,.go-to-login-button{
@@ -1668,6 +1671,12 @@ text-align:center;
 
 // Mobile Landscape (max-width:1000px)
 @media only screen and  (orientation:landscape) and (min-aspect-ratio:1.75) {
+
+  .login-bottom{
+    display: flex;
+    flex-direction: row;
+  }
+
   .header{
     width:200px;
     align-items: center;
