--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -92,7 +92,11 @@
 
         </div>
         <div class="login-form-group">
-          <button title="login-button" type="submit" class="login-form-button">Sign In</button>
+          <button title="login-button" type="submit" class="login-form-button g-recaptcha"
+        
+          data-sitekey="6Ld1bOElAAAAAFQP-87plPiMToZYqojLl6P7NyGj" 
+          data-callback='onSubmit' 
+          data-action='submit'>Sign In</button>
         </div>
       </form>
 
