--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -99,6 +99,13 @@
           data-action='submit'>Sign In</button>
         </div>
       </form>
+      <form class="forgot-password-link-container " action="/forgot-password" method="GET">
+        <!-- <label class="forgot-password-link-label" for="forgot-password"></label>Forgot Password? </label> -->
+        <button class="forgot-password-link  forgot-password-button" id="forgot-password" type="submit">Forgot Password?</button>
+      </form>
+
+
+
 
       <div class="divider">
         <div class="line"></div><span class="or">or</span>
