--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -1706,13 +1706,13 @@ justify-content: center;
 align-items: center;
 text-align:center;
 }
-.login-flash-message.error, .signup-flash-message.error{
+.login-flash-message.error, .signup-flash-message.error, .forgot-password-flash-message.error{
   background-color: pink;
   color:red;
   
   
   }
-  .login-flash-message.success,  .signup-flash-message.success{
+  .login-flash-message.success,  .signup-flash-message.success,  .forgot-password-flash-message.success{
     background-color: rgb(107, 216, 129);
     color:rgb(16, 75, 15);
     }
