--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -1358,6 +1358,8 @@ background:rgba(255, 255, 255, 0.25);
     // max-width: 90vw;
     // max-height:90vh;
     margin: 0 auto;
+    align-items: center;
+
     // padding: 5%;
     // border-radius: 4px;
     // background-color: #fff;
@@ -1379,6 +1381,9 @@ background:rgba(255, 255, 255, 0.25);
   /* Form */
   .login-form-group , .signup-form-group, .forgot-password-form-group{
     margin-bottom: 20px;
+  }
+  .signin-button-group,.play-as-guest{
+    width:100%;
   }
   .input-label {
     display: block;
@@ -1478,12 +1483,12 @@ background:rgba(255, 255, 255, 0.25);
   // padding:10px;
 }
 
-.login-form-group, .signup-form-group, .forgot-password-form-group{
+.login-form-group, .signup-form-group, .forgot-password-form-group,.create-account-form-group{
  width:100%
 
 }
 
-.login-form-button, .signup-form-button, .forgot-password-form-button{
+.login-form-button, .signup-form-button, .forgot-password-form-button,.create-account-form-button{
   width:100%;
   padding:10px;
   font-family:'Roboto';
@@ -1498,12 +1503,23 @@ background:rgba(255, 255, 255, 0.25);
   background-color:$minus-blue;
   // background: #fad787;
 }
+.create-account-form-button{
+  margin-bottom:0;
+}
 .guest-button{
   background-color:$plus-green;
+
+}
+.google-block{
+  // margin-bottom:20px;
 }
 
-
-
+.login-blocks, .google-block{
+  min-height:140px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
 
 
 .google-button{
@@ -1513,9 +1529,10 @@ background:rgba(255, 255, 255, 0.25);
   align-items: center;
   padding: 2px;
   background: $chalk-white;
-  height: 50px;
+  height: 45px;
+  width: 264px;
   border: none;
-  border-radius: 34px;
+  border-radius: 3px;
   color:transparent;
   transition:all 250ms ease-in;
 
@@ -1523,14 +1540,16 @@ background:rgba(255, 255, 255, 0.25);
   // background-image:url("/dist/assets/google-svg.svg");
   // background-size:auto;
   background-repeat:no-repeat;
-  background-size:  40px 40px;
+  background-size:  30px 30px;
   background-position: center;
+  margin-top:0;
   &:hover{
     background:#ea4335;
     background-image:none;
     color:$chalk-white;
     transition:all 250ms ease-in;
     background-position: center;
+    border-radius:25px;
 
   }
 &:active{
@@ -1600,7 +1619,7 @@ background:rgba(255, 255, 255, 0.25);
 .input-shell{
   background:white;
   // border: solid grey 2px;
-  border-radius: 25px;
+  border-radius: 3px;
   display: flex;
   padding:0rem 1rem;
   gap: 1rem;
@@ -1795,18 +1814,29 @@ text-align:center;
   cursor: pointer;
 }
 
+// .signup-flash-message,.login-flash-message{
+//   margin-bottom:5px;
+//   border-radius:5px;
+//   width:100%;
+// }
 
 
 
 
 
 
+.google-login-group{
+  margin-bottom:80px;
+}
 
 
 
-
-
-
+.signup-top-left,.signup-bottom-right{
+  width:264px;
+  display:flex;
+  flex-direction:column;
+  justify-content:flex-end;
+}
 
 
 
@@ -1839,7 +1869,51 @@ text-align:center;
   .login-bottom{
     display: flex;
     flex-direction: row;
+    width:600px;
+    justify-content: space-around;
+    align-items: center;
   }
+.login-bottom-two{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  min-height: 225px;
+}
+.login-left-upper{
+  min-height: 225px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+.google-login-group{
+  margin-bottom:0;
+}
+.play-as-guest{
+  margin-bottom:0;
+}
+.login-blocks{
+  justify-content: flex-start;
+}
+.create-account-form-group{
+  margin-bottom:0;
+}
+.signup-landscape-bottom{
+  display: flex;
+  width: 600px;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: flex-end;
+}
+.login-form, .signup-form, .forgot-password-form{
+
+  justify-content: flex-end;
+
+  // padding:10px;
+}
+
+
+
 
   .header{
     width:200px;
