Fix closeButton logic

--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -36,7 +36,7 @@
             <p>
               <%= loginMessage %>
             </p>
-            <!-- <button class="close-login-alert" id="close-login-alert"><i class="close-login-alert-icon">x</i></button> -->
+            <button class="close-login-alert" id="close-login-alert"><i class="close-login-alert-icon">x</i></button>
           </div>
 
 
