--- a/public/views/signup.ejs
+++ b/public/views/signup.ejs
@@ -37,7 +37,7 @@
             <p>
               <%= signupMessage %>
             </p>
-            <!-- <button class="close-signup-alert" id="close-signup-alert"><i class="close-signup-alert-icon">x</i></button> -->
+            <button class="close-signup-alert" id="close-signup-alert"><i class="close-signup-alert-icon">x</i></button>
           </div>
 
 
