--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -799,7 +799,8 @@ background:rgba(255, 255, 255, 0.25);
   display:none;
 }
 
-.login-menu-container, .signup-menu-container, .activity-menu-container,.middle, .top,.bottom{
+.login-menu-container, .signup-menu-container, .activity-menu-container,.middle, .top,.bottom, .forgot-password-menu-container
+,.forgot-username-menu-container{
   display:flex; 
 
 
@@ -1352,7 +1353,7 @@ background:rgba(255, 255, 255, 0.25);
 
 
   /* Container */
-  .login-container, .signup-container,.forgot-password-container {
+  .login-container, .signup-container,.forgot-password-container,.forget-username-container {
     display: flex;
     flex-direction: column;
     // max-width: 90vw;
@@ -1367,7 +1368,7 @@ background:rgba(255, 255, 255, 0.25);
   }
   
   /* Headings */
-  .login-header,.signup-header, .forgot-password-header {
+  .login-header,.signup-header, .forgot-password-header,.forgot-username-header {
     margin-top: 0;
     margin-bottom: 20px;
     font-size: 28px;
@@ -1379,10 +1380,10 @@ background:rgba(255, 255, 255, 0.25);
   }
   
   /* Form */
-  .login-form-group , .signup-form-group, .forgot-password-form-group{
+  .login-form-group , .signup-form-group, .forgot-password-form-group,.forgot-username-form-group{
     margin-bottom: 20px;
   }
-  .signin-button-group,.play-as-guest{
+  .signin-button-group,.play-as-guest,.forgot-password-form-button,.forgot-username-form-button{
     width:100%;
   }
   .input-label {
@@ -1398,7 +1399,7 @@ background:rgba(255, 255, 255, 0.25);
   .form-input[type="password"],
     .form-input[type="email"] {
     width: 100%;
-    padding: 8px 4px;
+    padding: 8px 0px;
     // border: 1px solid #ccc;
     // border-radius: 4px;
     border:none;
@@ -1424,7 +1425,7 @@ background:rgba(255, 255, 255, 0.25);
 
 
   }  
-  .login-input::placeholder,.signup-input::placeholder, .forgot-password-input::placeholder{
+  .login-input::placeholder,.signup-input::placeholder, .forgot-password-input::placeholder,.forgot-username-input::placeholder{
     font-size:11px;
   }
 
@@ -1475,7 +1476,7 @@ background:rgba(255, 255, 255, 0.25);
 }
 
 
-.login-form, .signup-form, .forgot-password-form{
+.login-form, .signup-form, .forgot-password-form,.forgot-username-form{
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1483,12 +1484,12 @@ background:rgba(255, 255, 255, 0.25);
   // padding:10px;
 }
 
-.login-form-group, .signup-form-group, .forgot-password-form-group,.create-account-form-group{
+.login-form-group, .signup-form-group, .forgot-password-form-group,.forgot-username-form-group,.create-account-form-group{
  width:100%
 
 }
 
-.login-form-button, .signup-form-button, .forgot-password-form-button,.create-account-form-button{
+.login-form-button, .signup-form-button, .forgot-password-form-button,.forgot-username-form-button,.create-account-form-button{
   width:100%;
   padding:10px;
   font-family:'Roboto';
@@ -1518,7 +1519,7 @@ background:rgba(255, 255, 255, 0.25);
   min-height:140px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 
@@ -1528,7 +1529,7 @@ background:rgba(255, 255, 255, 0.25);
   justify-content: center;
   align-items: center;
   padding: 2px;
-  background: $chalk-white;
+  background:white;
   height: 45px;
   width: 264px;
   border: none;
@@ -1621,12 +1622,14 @@ background:rgba(255, 255, 255, 0.25);
   // border: solid grey 2px;
   border-radius: 3px;
   display: flex;
-  padding:0rem 1rem;
+  padding:0rem 0.5rem 0 1rem;
   gap: 1rem;
   justify-content: center;
   height:45px;
   align-items: center;
   border:2px solid white;
+  width:264px;
+
   &:focus-within{ border: solid 2px orange;
   transition: border 100ms ease-in;
   }
@@ -1660,19 +1663,38 @@ background:rgba(255, 255, 255, 0.25);
   }
   
 }
-.forgot-text-container,.login-create-account-container,.signup-login-link-container{
+.password-group{
+  margin-bottom:0;
+}
+.forgot-text-container,.forgot-links-container,.login-create-account-container,.signup-login-link-container,.forgot-password-to-login-container,.forgot-username-to-login-container,.forgot-password-username-container{
   display: flex;
   justify-content: space-around;
   align-items: center;
   width:100%;
 }
-.login-create-account-text,.signup-login-link-text{
+.forgot-text-container,.forgot-links-container,.login-create-account-container{
+  margin-bottom:5px;
+}
+.forgot-password-label,.forgot-username-label{
+  color:$chalk-white;
+  font-size:12px;
+  font-family:roboto;
+  // text-align: center;
+}
+.forgot-password-to-login-container,.forgot-username-to-login-container,.forgot-password-username-container{
+  margin-top:20px;
+  justify-content: center;
+}
+.forgot-password-shell,.forgot-username-shell{
+  width:264px;
+}
+.login-create-account-text,.signup-login-link-text, .forgot-password-to-login-text,.forgot-username-to-login-text,.forgot-password-username-text{
   color:$chalk-white;
   font-family:'roboto';
   font-size:12px;
   text-align:center;
 }
-.forgot-text-link,.login-create-account-link,.signup-login-link{
+.forgot-text-link,.login-create-account-link,.signup-login-link,.forgot-password-to-login-link,.forgot-username-to-login-link,.forgot-password-username-link{
   color:$chalk-white;
   font-family:'roboto';
   font-size:12px;
@@ -1787,13 +1809,13 @@ justify-content: center;
 align-items: center;
 text-align:center;
 }
-.login-flash-message.error, .signup-flash-message.error, .forgot-password-flash-message.error{
+.login-flash-message.error, .signup-flash-message.error, .forgot-password-flash-message.error,.forgot-username-flash-message.error{
   background-color: pink;
   color:red;
   
   
   }
-  .login-flash-message.success,  .signup-flash-message.success,  .forgot-password-flash-message.success{
+  .login-flash-message.success,  .signup-flash-message.success,  .forgot-password-flash-message.success,.forgot-username-flash-message.success{
     background-color: rgb(107, 216, 129);
     color:rgb(16, 75, 15);
     }
@@ -1839,7 +1861,9 @@ text-align:center;
 }
 
 
-
+.google-block{  
+  min-height:125px;
+}
 
 
 
@@ -1892,9 +1916,9 @@ text-align:center;
 .play-as-guest{
   margin-bottom:0;
 }
-.login-blocks{
-  justify-content: flex-start;
-}
+// .login-blocks{
+//   justify-content: flex-start;
+// }
 .create-account-form-group{
   margin-bottom:0;
 }
@@ -1912,7 +1936,12 @@ text-align:center;
   // padding:10px;
 }
 
-
+.login-blocks, .google-block{
+  min-height:140px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
 
   .header{
@@ -2146,6 +2175,63 @@ padding-top:50px;
   // .display-container{
   // flex-direction: row;
 
+// Mobile Landscape (max-width:1000px)
+
+  .divider{
+    display:none;
+  }
+  .login-bottom{
+    display: flex;
+    flex-direction: row;
+    width:600px;
+    justify-content: space-around;
+    align-items: center;
+  }
+.login-bottom-two{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  min-height: 225px;
+}
+.login-left-upper{
+  min-height: 225px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+.google-login-group{
+  margin-bottom:0;
+}
+.play-as-guest{
+  margin-bottom:0;
+}
+// .login-blocks{
+//   justify-content: flex-start;
+// }
+.create-account-form-group{
+  margin-bottom:0;
+}
+.signup-landscape-bottom{
+  display: flex;
+  width: 600px;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: flex-end;
+}
+.login-form, .signup-form, .forgot-password-form{
+
+  justify-content: flex-end;
+
+  // padding:10px;
+}
+.login-blocks, .google-block{
+  min-height:140px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
   // }
   .activity-menu-container, .operator-menu-container, .difficulty-menu-container, .game-middle-lower, .real-menu-container, .practice-menu-container{
     // display: flex;
@@ -2370,4 +2456,47 @@ $color: $chalk-white;
   opacity: 1;
   transition: opacity 1s ease-in-out;
   border:12px solid $wood;
+}
+
+@media only screen  and (max-width:330px)  {
+
+  .google-block{
+    min-height:60px;
+  }
+  
+
+  .google-login-group{
+    margin-bottom:10px;
+  }
+//   .login-bottom {
+//     display: flex;
+//     flex-direction: row;
+//     width: 540px;
+//     justify-content: space-around;
+//     align-items: center;
+
+// }
+}
+@media only screen  and (max-width:580px) and (orientation:landscape)  {
+.login-top{
+  height:3ch;
+}
+
+  .google-login-group{
+    margin-bottom:10px;
+  }
+  .login-bottom {
+    display: flex;
+    flex-direction: row;
+    width: 540px;
+    justify-content: space-around;
+    align-items: center;
+
+}
+.google-button,.input-shell{
+  width:240px;
+}
+.form-input[type=text], .form-input[type=password], .form-input[type=email]{
+  font-size:12px;
+}
 }
