Fix style issues

--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -2467,7 +2467,7 @@ $color: $chalk-white;
   width: 600px;
   flex-direction: row;
   justify-content: space-around;
-  align-items: flex-end;
+  align-items: center;
 }
 .login-form, .signup-form, .forgot-password-form{
 
