--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -1537,8 +1537,7 @@ background:rgba(255, 255, 255, 0.25);
   color:transparent;
   transition:all 250ms ease-in;
 
-  background-image:url("https://www.svgrepo.com/download/448227/google.svg");
-  // background-image:url("/dist/assets/google-svg.svg");
+  background-image:url("../assets/google-svg.svg");
   // background-size:auto;
   background-repeat:no-repeat;
   background-size:  30px 30px;
