Comment and Cleanup
--Remove local Storage Script.
--add comment to code to all of index.js

--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -1530,6 +1530,7 @@ background:rgba(255, 255, 255, 0.25);
   align-items: center;
   padding: 2px;
   background:white;
+  background: #eff6f9;
   height: 45px;
   width: 264px;
   border: none;
