--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -55,15 +55,7 @@
 
 
       </div>
-      <div class="circular-menu" id="burger-menu-open">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Profile</a></li>
-          <li><a href="#">Tests</a></li>
-          <li><a href="#">Practice</a></li>
-          <li><a href="#">Logout</a></li>
-        </ul>
-      </div>
+
     </div>
     <div id="activity-alert-modal" class="message-modal">
       <div class="message-intro">Please Select An Activity </div>
@@ -563,7 +555,7 @@
   <!-- <script type="module" src="/js/formInteraction.js"></script> -->
    
 
-  <script type="module" src="/js/burger-logic.js"></script>
+  <!-- <script type="module" src="/js/burger-logic.js"></script> -->
 
 
  
