--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -555,7 +555,7 @@
   <!-- <script type="module" src="/js/formInteraction.js"></script> -->
    
 
-  <!-- <script type="module" src="/js/burger-logic.js"></script> -->
+  <script type="module" src="/js/burger-old.js"></script>
 
 
  
