--- a/public/views/profile.ejs
+++ b/public/views/profile.ejs
@@ -33,7 +33,7 @@
 
 
 
-    <div id="burger-container" class="burger-container box-container">
+    <!-- <div id="burger-container" class="burger-container box-container">
 
       <div class="burger open" id="burger">
        <span></span>
@@ -43,9 +43,10 @@
 
       </div>
     </div>
-    
+     -->
     
 
+    <%- include('partials/_burger') %>
 
 
 
@@ -197,6 +198,7 @@
 
   <script type="module" src="/js/profile.js"></script>
   <script type="module" src="/js/logout.js"></script>
+  <script type="module" src="/js/burger.js"></script>
   <!-- <script type="module" src="/js/formInteraction.js"></script> -->
     
  
