--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -607,84 +607,6 @@ font-family:'Pangolin', cursive;
   align-items: center;
 }
 
-.burger-container {
-  width: 60px;
-  height: 60px;
-  display: none; // make none after editing.
-background:rgba(255, 255, 255, 0);
-  position: absolute;
-  top: 8vh;
-  right: 5vw;
-  transition: all 200ms ease;
-  &:hover {
-background:rgba(255, 255, 255, 0.25);
-    .burger:not(.open) span:nth-child(1) {
-      transform: scaleX(0.8);
-    }
-    .burger:not(.open) span:nth-child(2) {
-      transform: scaleX(0.5);
-    }
-    .burger:not(.open) span:nth-child(3) {
-      transform: scaleX(0.8);
-    }
-  }
-}
-.burger {
-  width: 35px;
-  height: 30px;
-  position: relative;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 100%;
-  & span {
-    background-color:$chalk-white;
-    position: absolute;
-    border-radius: 2px;
-    transition: 0.3s cubic-bezier(0.8, 0.5, 0.2, 1.4);
-    width: 100%;
-    height: 5px;
-    &:nth-child(1) {
-      top: 0px;
-      left: 0px;
-    }
-    &:nth-child(2) {
-      top: 13px;
-      left: 0px;
-    }
-    &:nth-child(3) {
-      bottom: 0px;
-      left: 0px;
-    }
-  }
-}
-
-
-.burger span:nth-child(1) {
-  top: 0px;
-  left: 0px;
-} 
-.burger span:nth-child(2) {
-  top: 13px;
-  left: 0px;
-}
-.burger span:nth-child(3) {
-  bottom: 0px;
-  left: 0px;
-}
-
-.burger.open span:nth-child(1) {
-  transform: rotate(90deg);
-  top: 13px;
-}
-.burger.open span:nth-child(2) {
-  transform: scale(0);
-  transition-duration: 50ms;
-}
-.burger.open span:nth-child(3) {
-  top: 13px;
-}
 
 
 
@@ -2763,6 +2685,96 @@ $color: $chalk-white;
 
 // BURGER
 
+.burger-container {
+  width: 60px;
+  height: 60px;
+  display: flex; // make none after editing.
+background:rgba(255, 255, 255, 0);
+  position: absolute;
+  top: 5vh;
+  right: 5vw;
+  transition: all 200ms ease;
+  &:hover {
+// background:rgba(255, 255, 255, 0.25);
+    .burger:not(.open) span:nth-child(1) {
+      transform: scaleX(0.8);
+    }
+    .burger:not(.open) span:nth-child(2) {
+      transform: scaleX(0.5);
+    }
+    .burger:not(.open) span:nth-child(3) {
+      transform: scaleX(0.8);
+    }
+  }
+}
+.burger {
+  width: 35px;
+  height: 30px;
+  position: relative;
+  z-index:10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  & span {
+    background-color:$chalk-white;
+    position: absolute;
+    border-radius: 2px;
+    transition: 0.3s cubic-bezier(0.8, 0.5, 0.2, 1.4);
+    width: 100%;
+    height: 5px;
+    &.active{
+      background-color:$chalkboard-green;
+    }
+    &:nth-child(1) {
+      top: 0px;
+      left: 0px;
+    }
+    &:nth-child(2) {
+      top: 13px;
+      left: 0px;
+    }
+    &:nth-child(3) {
+      bottom: 0px;
+      left: 0px;
+    }
+  }
+}
+
+
+.burger span:nth-child(1) {
+  top: 0px;
+  left: 0px;
+} 
+.burger span:nth-child(2) {
+  top: 13px;
+  left: 0px;
+}
+.burger span:nth-child(3) {
+  bottom: 0px;
+  left: 0px;
+}
+
+.burger.open span:nth-child(1) {
+  transform: rotate(90deg);
+  top: 13px;
+}
+.burger.open span:nth-child(2) {
+  transform: scale(0);
+  transition-duration: 50ms;
+}
+.burger.open span:nth-child(3) {
+  top: 13px;
+}
+
+
+
+
+
+
+
+
+
 
 // .burger-container-new {
 //   display: flex;
@@ -2792,36 +2804,56 @@ $color: $chalk-white;
 //   transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
 // }
 
-.circular-menu {
+
+
+
+
+
+.expanded-menu {
   position: absolute;
-  display:none;
-  top: 0;
-  right: 0;
-  width: 50px;
-  height: 50px;
+  display:flex;
+  top: calc(-3vh + 15px);
+  right: calc(-3vw + 15px);
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
-  background-color: #ffffff1c;
+  background-color: #1b2e6000;
   transform-origin: center;
   overflow: hidden;
-  transition: width 0.3s ease-in-out, height 0.3s ease-in-out, border-radius 0.3s ease-in-out;
+  transition: 
+    width 0.3s ease-in-out, 
+    height 0.3s ease-in-out, 
+    border-radius 0.3s ease-in-out,
+    background-color 0.3s ease-in-out;
+  // transition:all 0.5s ease;
   z-index: 1;
 }
 
 
-.circular-menu.active {
+.expanded-menu.active {
+  transition:all 0.5s ease;
   width: 300px;
   height: 600px;
   border-radius: 10px;
+  background-color:$chalk-white;
   display:flex;
+  position: absolute;
+    top: calc(-3vh + 15px);
+    right: calc(-3vw + 15px);
+    // border-top-right-radius: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 
-.circular-menu.active ul {
+.expanded-menu.active ul {
   opacity: 1;
   transform: translateY(0);
 }
 
-.circular-menu ul {
+.expanded-menu ul {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -2834,13 +2866,14 @@ $color: $chalk-white;
   transform: translateY(-20px);
 }
 
-.circular-menu li {
+.expanded-menu li {
   margin: 10px 0;
   text-align: center;
+  padding:20px;
 }
 
-.circular-menu a {
-  color: #000;
+.expanded-menu a {
+  color: $chalkboard-green;
   text-decoration: none;
   font-size: 14px;
 }
