--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -613,6 +613,7 @@
 
 
             <script type="module" src="/js/burger.js"></script>
+            <script type="module" src="/js/front-navigation.js"></script>
 
 
 
