--- a/public/views/partials/_burger.ejs
+++ b/public/views/partials/_burger.ejs
@@ -12,8 +12,8 @@
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/profile">Profile</a></li>
-        <li id="tests-nav"><a href="#">Tests</a></li>
-        <li id="practice-nav"><a href="#">Practice</a></li>
+        <li ><a id="test-nav" href="/">Tests</a></li>
+        <li ><a id="practice-nav" href="/">Practice</a></li>
         <li><a href="/logout">Logout</a></li>
       </ul>
     </div>
