--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -2712,6 +2712,8 @@ background:rgba(255, 255, 255, 0);
   top: 5vh;
   right: 5vw;
   transition: all 200ms ease;
+  z-index:200;
+
   &:hover {
 // background:rgba(255, 255, 255, 0.25);
     // .burger:not(.open) span:nth-child(1) {
