Working profile updates,
Badges on MCQ
routes cleaner

--- a/public/views/profile.ejs
+++ b/public/views/profile.ejs
@@ -77,7 +77,7 @@
                     <span id="avatar-modal-close" class="avatar-modal-close">&times;</span>
                   </div>
                   <div class="avatar-modal-body">
-                    <div class="avatar-user-icons">
+                    <div id="avatar-user-icons" class="avatar-user-icons">
                       <img class="avatar-modal-icon" src="../assets/bunny.png" title="Bunny" alt="Bunny">
                       <img class="avatar-modal-icon" src="../assets/dog.png" title="Dog" alt="Dog">
                       <img class="avatar-modal-icon" src="../assets/elephant.png" title="Elephant" alt="Elephant">
@@ -178,12 +178,7 @@
         
 
 
-<!-- 
-        <div class="logout-container">
-          <button title="logout-button" class="logout-btn" id="logout-btn">
-            <div class="logout-text">Logout</div>
-          </button>
-        </div> -->
+
 
 </div>
 
@@ -200,7 +195,7 @@
 
   <script type="module" src="/js/profile.js"></script>
   <script type="module" src="/js/badges.js"></script>
-  <script type="module" src="/js/logout.js"></script>
+  <!-- <script type="module" src="/js/logout.js"></script> -->
   <script type="module" src="/js/burger.js"></script>
   <!-- <script type="module" src="/js/formInteraction.js"></script> -->
     
